# iterpath

./: CHANGELOG.md  README.rst  iterpath.py  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: test.yml
src/iterpath/: __init__.py  core.py  selectors.py
test/: test_iterpath.py  test_selectors.py
test/data/dir02/: link
